src/components/AddUserItem/index.css
.add-user-container {
  display: flex;
  flex-direction: row;
}

.item-details-container {
  min-height: 80vh;
  min-width: 100%;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
}

@media screen and (min-width: 768px) {
  .item-details-container {
    min-width: 50%;
  }
}
.image-container {
  display: none;
}
@media screen and (min-width: 768px) {
  .image-container {
    display: block;
    min-width: 50%;
  }
}
.add-user-image {
  width: 100%;
  height: 100%;
}
.back-to_users-link {
  text-decoration: none;
}

.back-arrow-btn {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  color: #7e858e;
  font-family: 'Space Grotesk', sans-serif;
  font-weight: 400;
}
.arrow-icon {
  color: #171f46;
  font-size: 20px;
}
.form-details-container {
  display: flex;
  align-items: center;
  justify-content: center;
}
.form-container {
  background-color: #ffffff;
  border-radius: 8px;
  border: 1px solid #d7dfe9;
  width: 90%;
  padding: 30px;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  margin-top: 24px;
}
@media screen and (min-width: 576px) {
  .form-container {
    width: 70%;
    margin-top:8px;
  }
}
@media screen and (min-width: 768px) {
  .form-container {
    background-color: transparent;
    border: none;
    width: 90%;
    max-width: 400px;
  }
}
.form-heading {
  font-family: 'Space Grotesk', sans-serif;
  font-size: 32px;
  color: #171f46;
  text-align: center;
  font-weight: 400;
  margin-bottom: 30px;
}
.input-container {
  display: flex;
  flex-direction: column;
  margin-bottom: 20px;
}
.input-field {
  padding: 8px 16px;
  border: 1px solid #d7dfe9;
  background-color: #ffffff;
  border-radius: 2px;
  font-family: "'Space Grotesk', sans-serif";
  font-weight: 400;
  color: #171f46;
  line-height: 24px;
}
.input-label {
  color: #7e858e;
  font-weight: 600;
  font-size: 12px;
  font-family: "'Space Grotesk', sans-serif";
  margin-bottom: 5px;
}
.submit-button {
  align-self: center;
  border-radius: 4px;
  background: #0b69ff;
  color: #ffffff;
  font-size: 12px;
  width: 100px;
  font-weight: 600;
  padding: 10px 20px;
  font-family: 'Space Grotesk', sans-serif;
  border: none;
  cursor: pointer;
  margin-top: 20px;
}

